# Bits-and-Droids-flight-connector

./: .gitignore  BitsAndDroidsGui.rc  Bitsanddroidsgui.pro  Bitsanddroidsgui.pro.qtds  Bitsanddroidsgui.pro.user.26aeae6  Bitsanddroidsgui_en_US.ts  CMakeLists.txt  Documents - Shortcut.lnk  Engine.h  Jenkinsfile  Makefile  Makefile.Debug  Makefile.Release  README.md  Resources.qrc  SimConnect.cfg  SimConnect.lib  SimVariables.h.autosave  appicon.rc  bitsAndDroids  bitsanddroids.qdocconf  config  constants.h  main.cpp  main.css  mainwindow.ui  object_script.Bitsanddroidsgui.Debug  object_script.Bitsanddroidsgui.Release  optionsmenu.ui  outputs.json  qcustomplot.cpp  styles.css  ui_calibrateaxismenu.h  ui_eventwindow.h  ui_librarygeneratorwindow.h  ui_mainwindow.h  ui_optionsmenu.h  ui_outputmenu.h
.github/: FUNDING.yml
Inputs/: InputMapper.h  InputSwitchHandler.cpp  InputSwitchHandler.h  InputWorker.cpp  InputWorker.h  inputenum.cpp  inputenum.h  inputmapper.cpp
codegenerator/: CodeGeneratorWindow.cpp  CodeGeneratorWindow.h
dashboard/: Dashboard.cpp  Dashboard.h  Dashboard.ui  ui_Dashboard.h
debug/: moc_InputWorker.cpp  moc_dualworker.cpp  moc_mainwindow.cpp  qmake_qmake_immediate.qrc  qrc_Resources.cpp  qrc_qmake_qmake_immediate.cpp
doc/: bitsanddroidsgui.index  connectworker.html  inputworker.html
docs/: _axis_type_enum_8h_source.html  _board_8h.html  _code_generator_window_8cpp.html  _com_bundle_8h_source.html  _com_port_button_row_8cpp.html  _com_port_row_8h_source.html  _com_port_widget_model_8cpp.html  _com_port_widget_model_8h.html  _com_settings_handler_8h_source.html  _comport_widget_8h_source.html  _curve_axis_8cpp.html  _dashboard_8h_source.html  _dashboard_controller_8h_source.html  _element_8cpp.html  _engine_8h.html  _event_8h_source.html  _event_datatype_8cpp.html  _event_datatype_8h_source.html  _event_file_formatter_8h.html  _event_type_8h_source.html  _input_reader_8cpp.html  _input_switch_handler_8cpp.html  _input_switch_handler_8h.html  _input_switch_handler_8h_source.html  _input_type_enum_8h.html  _input_type_enum_8h_source.html  _j_s_o_n_parser_8h.html  _j_s_o_n_parser_8h_source.html  _log_8h_source.html  _log_window_8cpp.html  _m_f_s2020.html  _m_f_s_worker_8cpp.html  _m_f_s_worker_8h_source.html  _m_push_button_8h_source.html  _menu_bar_8h_source.html  _message_caster_8cpp.html  _message_caster_8h.html  _message_caster_8h_source.html  _mode_enum_8h.html  _mode_index_checkbox_8cpp.html  (+169 more)
dual/: dualworker.cpp  dualworker.h
elements/: Element.cpp  Element.h  MPushButton.cpp  MPushButton.h  MStyleLabels.cpp  MStyleLabels.h  ModeIndexCheckbox.cpp  ModeIndexCheckbox.h  ModeIndexCombobox.cpp  ModeIndexCombobox.h  mcheckbox.cpp  mcheckbox.h
enums/: AxisTypeEnum.h  ButtonStyleEnum.h  CurveTypeEnum.h  InputTypeEnum.h  LogLevelEnum.h  ModeEnum.h  OutputModesEnum.h  StyleEnum.h  inputenum.cpp  inputenum.h  outputenum.cpp
events/: Event.h  EventDatatype.cpp  EventType.h  eventwindow.cpp  eventwindow.h  eventwindow.ui
handlers/: InputSwitchHandler.cpp  InputSwitchHandler.h  outputhandler.cpp  outputhandler.h  pathhandler.cpp  pathhandler.h  sethandler.h  settingshandler.cpp  settingshandler.h
headers/: ConnectWorker.h  ConnectWorker.h.autosave  Engine.h  InputMapper.h  InputSwitchHandler.h  InputWorker.h  SerialPort.hpp  SerialReader.h  SimConnect.h  connectthread.h  constants.h  formbuilder.h  inputenum.h  mainwindow.h  optionsmenu.h  radioworker.h  set.h  settingsranges.h
json/: outputs.json
logging/: LogWindow.cpp  LogWindow.h  Logger.cpp  Logger.h  MessageCaster.cpp  MessageCaster.h
models/: Category.cpp  Category.h  Log.cpp  Log.h  SimConnect.h
objects/: moc_InputWorker.cpp  moc_dualworker.cpp  moc_formBuilder.cpp  moc_mainwindow.cpp  moc_optionsmenu.cpp  moc_outputmenu.cpp  moc_outputworker.cpp  moc_predefs.h
outputmenu/: outputmapper.cpp  outputmapper.h  outputmenu.cpp  outputmenu.h
outputs/: activeoutputs.cpp  activeoutputs.h  output.cpp  output.h  outputEnum.h  outputbundle.cpp  outputbundle.cpp.autosave  outputbundle.h  outputenum.cpp  outputhandler.cpp  outputhandler.h  outputmapper.cpp  outputmapper.h  outputs.json  outputworker.cpp  outputworker.h  set.cpp  set.h  sethandler.cpp  sethandler.h
rungaurd/: RunGuard.cpp  RunGuard.h
serial/: SerialPort.cpp  SerialPort.hpp
services/: InstallationService.cpp  InstallationService.h  LoggerService.cpp  LoggerService.h  ServiceWorker.cpp  ServiceWorker.h
settings/: ComSettingsHandler.cpp  ComSettingsHandler.h  PresetSettingsHandler.cpp  PresetSettingsHandler.h  ServiceSettingsHandler.cpp  ServiceSettingsHandler.h  calibrateaxismenu.cpp  calibrateaxismenu.h  coordinates.cpp  coordinates.h  formbuilder.cpp  formbuilder.h  optionsmenu.cpp  optionsmenu.h  optionsmenu.ui  outputmenu.cpp  outputmenu.h  outputmenu.ui  settingshandler.cpp  settingshandler.h  settingsranges.cpp  settingsranges.h
sources/: ConnectWorker.cpp  Engine.cpp  InputSwitchHandler.cpp  InputSwitchHandler.cpp.autosave  InputWorker.cpp  SerialPort.cpp  SerialReader.cpp  formbuilder.cpp  (+11 more)
tests/: CMakeLists.txt  tests.cpp  tests.h
tests/ConnectorTests/: CMakeLists.txt  tst_outputtests.cpp
(+1192 files in other folders)
